--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Astral</title>
     <link rel="stylesheet" href="styles/main.css" />
-    <link rel="icon" type="image/x-icon" href="./images/astralcup-logo.png">
+    <link rel="icon" type="image/x-icon" href="./images/astralcup-logo.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -14,26 +14,25 @@
   <body>
     <nav class="navbar">
       <div class="navbar-container">
-        <a href="index.html" class="navbar-brand">
+        <a href="/" class="navbar-brand">
           <img src="./images/astralcup.png" alt="Astral Cup Logo" />
           <span>ASTRAL CUP</span>
         </a>
 
         <div class="navbar-content">
           <ul class="navbar-menu">
-            <li><a href="pages/staff.html">Staff</a></li>
-            <li><a href="pages/classifica.html">Classifica</a></li>
-            <li><a href="index.html" class="outline-glow">Home</a></li>
-            <li><a href="pages/memories.html">Memories</a></li>
-            <li><a href="pages/tornei.html">Tornei</a></li>
+            <li><a href="/staff">Staff</a></li>
+            <li><a href="/classifica">Classifica</a></li>
+            <li><a href="/" class="outline-glow">Home</a></li>
+            <li><a href="/memories">Memories</a></li>
+            <li><a href="/tornei">Tornei</a></li>
           </ul>
           <div class="navbar-actions">
             <a href="/discord" class="btn-discord outline-glow"
               ><i class="fab fa-discord"></i> Login</a
             >
           </div>
-          <div class="navbar-login">
-          </div>
+          <div class="navbar-login"></div>
         </div>
 
         <div class="navbar-toggle" id="mobile-menu">
@@ -55,10 +54,9 @@
     <section id="staff" class="section-padding">
       <div class="container">
         <h2 class="section-title">IL NOSTRO STAFF</h2>
-        <div class="grid-3">
-        </div>
+        <div class="grid-3"></div>
         <div class="section-footer">
-          <a href="#" class="btn-visit">Visita ora</a>
+          <a href="/staff" class="btn-visit">Visita ora</a>
         </div>
       </div>
     </section>
@@ -66,10 +64,9 @@
     <section id="tornei" class="section-padding">
       <div class="container">
         <h2 class="section-title">TORNEI IN EVIDENZA</h2>
-        <div class="grid-3">
-        </div>
+        <div class="grid-3"></div>
         <div class="section-footer">
-          <a href="#" class="btn-visit">Visita ora</a>
+          <a href="/tornei" class="btn-visit">Visita ora</a>
         </div>
       </div>
     </section>
@@ -101,7 +98,7 @@
           </div>
         </div>
         <div class="section-footer">
-          <a href="#" class="btn-visit">Visita ora</a>
+          <a href="/classifica" class="btn-visit">Visita ora</a>
         </div>
       </div>
     </section>
@@ -109,10 +106,9 @@
     <section id="memories" class="section-padding">
       <div class="container">
         <h2 class="section-title">MEMORIES</h2>
-        <div class="grid-3">
-        </div>
+        <div class="grid-3"></div>
         <div class="section-footer">
-          <a href="pages/memories.html" class="btn-visit">Visita ora</a>
+          <a href="/memories" class="btn-visit">Visita ora</a>
         </div>
       </div>
     </section>
