--- a/public/pages/classifica.html
+++ b/public/pages/classifica.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
-    <link rel="icon" type="image/x-icon" href="../images/astralcup-logo.png">
+    <link rel="icon" type="image/x-icon" href="../images/astralcup-logo.png" />
   </head>
   <body>
     <nav class="navbar">
@@ -21,21 +21,20 @@
 
         <div class="navbar-content">
           <ul class="navbar-menu">
-            <li><a href="staff.html">Staff</a></li>
-            <li><a href="classifica.html" class="outline-glow">Classifica</a></li>
+            <li><a href="/staff">Staff</a></li>
+            <li><a href="/classifica" class="outline-glow">Classifica</a></li>
             <li><a href="/">Home</a></li>
-            <li><a href="memories.html">Memories</a></li>            
-            <li><a href="tornei.html">Tornei</a></li>
+            <li><a href="/memories">Memories</a></li>
+            <li><a href="/tornei">Tornei</a></li>
           </ul>
           <div class="navbar-actions">
-              <a href="/discord" class="btn-discord outline-glow"
-                  ><i class="fab fa-discord"></i> Login</a
-              >
+            <a href="/discord" class="btn-discord outline-glow"
+              ><i class="fab fa-discord"></i> Login</a
+            >
           </div>
-          <div class="navbar-login">
-          </div>
+          <div class="navbar-login"></div>
         </div>
-        
+
         <div class="navbar-toggle" id="mobile-menu">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -131,10 +130,10 @@
           <div class="footer-section">
             <h3>Navigazione</h3>
             <ul class="footer-links">
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="tornei.html">Tornei</a></li>
-              <li><a href="classifica.html">Classifica</a></li>
-              <li><a href="../index.html#staff">Staff</a></li>
+              <li><a href="/">Home</a></li>
+              <li><a href="/tornei">Tornei</a></li>
+              <li><a href="/classifica">Classifica</a></li>
+              <li><a href="/staff">Staff</a></li>
             </ul>
           </div>
           <div class="footer-section">
