--- a/public/pages/memories.html
+++ b/public/pages/memories.html
@@ -21,11 +21,11 @@
 
         <div class="navbar-content">
           <ul class="navbar-menu">
-            <li><a href="staff.html">Staff</a></li>
-            <li><a href="classifica.html">Classifica</a></li>
+            <li><a href="/staff">Staff</a></li>
+            <li><a href="/classifica">Classifica</a></li>
             <li><a href="/">Home</a></li>
-            <li><a href="memories.html" class="outline-glow">Memories</a></li>
-            <li><a href="tornei.html">Tornei</a></li>
+            <li><a href="/memories" class="outline-glow">Memories</a></li>
+            <li><a href="/tornei">Tornei</a></li>
           </ul>
           <div class="navbar-actions">
             <a href="/discord" class="btn-discord outline-glow"
@@ -90,10 +90,10 @@
           <div class="footer-section">
             <h3>Navigazione</h3>
             <ul class="footer-links">
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="tornei.html">Tornei</a></li>
-              <li><a href="classifica.html">Classifica</a></li>
-              <li><a href="../index.html#staff">Staff</a></li>
+              <li><a href="/">Home</a></li>
+              <li><a href="/tornei">Tornei</a></li>
+              <li><a href="/classifica">Classifica</a></li>
+              <li><a href="/staff">Staff</a></li>
             </ul>
           </div>
           <div class="footer-section">
