--- a/public/pages/staff.html
+++ b/public/pages/staff.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Il Nostro Staff</title>
     <link rel="stylesheet" href="../styles/main.css" />
-    <link rel="icon" type="image/x-icon" href="../images/astralcup-logo.png">
+    <link rel="icon" type="image/x-icon" href="../images/astralcup-logo.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -21,19 +21,18 @@
 
         <div class="navbar-content">
           <ul class="navbar-menu">
-            <li><a href="staff.html" class="outline-glow">Staff</a></li>
-            <li><a href="classifica.html">Classifica</a></li>
+            <li><a href="/staff" class="outline-glow">Staff</a></li>
+            <li><a href="/classifica">Classifica</a></li>
             <li><a href="/">Home</a></li>
-            <li><a href="memories.html">Memories</a></li>
-            <li><a href="tornei.html">Tornei</a></li>
+            <li><a href="/memories">Memories</a></li>
+            <li><a href="/tornei">Tornei</a></li>
           </ul>
           <div class="navbar-actions">
             <a href="/discord" class="btn-discord outline-glow"
               ><i class="fab fa-discord"></i> Login</a
             >
           </div>
-          <div class="navbar-login">
-          </div>
+          <div class="navbar-login"></div>
         </div>
 
         <div class="navbar-toggle" id="mobile-menu">
@@ -50,8 +49,7 @@
         <p>Incontra le persone che rendono tutto questo possibile.</p>
       </div>
 
-      <div class="grid-3" id="staff-grid">
-      </div>
+      <div class="grid-3" id="staff-grid"></div>
     </div>
 
     <footer>
@@ -74,10 +72,10 @@
           <div class="footer-section">
             <h3>Navigazione</h3>
             <ul class="footer-links">
-              <li><a href="#">Home</a></li>
-              <li><a href="#tornei">Tornei</a></li>
-              <li><a href="#classifica">Classifica</a></li>
-              <li><a href="#staff">Staff</a></li>
+              <li><a href="/">Home</a></li>
+              <li><a href="/tornei">Tornei</a></li>
+              <li><a href="/classifica">Classifica</a></li>
+              <li><a href="/staff">Staff</a></li>
             </ul>
           </div>
           <div class="footer-section">
