--- a/public/pages/tornei.html
+++ b/public/pages/tornei.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tornei - Astral Cup</title>
     <link rel="stylesheet" href="../styles/main.css" />
-    <link rel="icon" type="image/x-icon" href="../images/astralcup-logo.png">
+    <link rel="icon" type="image/x-icon" href="../images/astralcup-logo.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -21,21 +21,20 @@
 
         <div class="navbar-content">
           <ul class="navbar-menu">
-            <li><a href="staff.html">Staff</a></li>
-            <li><a href="classifica.html">Classifica</a></li>
+            <li><a href="/staff">Staff</a></li>
+            <li><a href="/classifica">Classifica</a></li>
             <li><a href="/">Home</a></li>
-            <li><a href="memories.html">Memories</a></li>            
-            <li><a href="tornei.html" class="outline-glow">Tornei</a></li>
+            <li><a href="/memories">Memories</a></li>
+            <li><a href="/tornei" class="outline-glow">Tornei</a></li>
           </ul>
           <div class="navbar-actions">
-              <a href="/discord" class="btn-discord outline-glow"
-                  ><i class="fab fa-discord"></i> Login</a
-              >
+            <a href="/discord" class="btn-discord outline-glow"
+              ><i class="fab fa-discord"></i> Login</a
+            >
           </div>
-          <div class="navbar-login">
-          </div>
+          <div class="navbar-login"></div>
         </div>
-        
+
         <div class="navbar-toggle" id="mobile-menu">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -44,12 +43,10 @@
       </div>
     </nav>
 
-    <div class="container" style="padding-top: 120px; padding-bottom: 50px">
+    <div id="tornei" class="container" style="padding-top: 120px; padding-bottom: 50px">
       <h1 class="section-title">Tornei Disponibili</h1>
 
-      <div class="grid-3">
-
-      </div>
+      <div class="grid-3"></div>
     </div>
     <footer>
       <div class="container">
@@ -71,10 +68,10 @@
           <div class="footer-section">
             <h3>Navigazione</h3>
             <ul class="footer-links">
-              <li><a href="../index.html">Home</a></li>
-              <li><a href="tornei.html">Tornei</a></li>
-              <li><a href="classifica.html">Classifica</a></li>
-              <li><a href="../index.html#staff">Staff</a></li>
+              <li><a href="/">Home</a></li>
+              <li><a href="/tornei">Tornei</a></li>
+              <li><a href="/classifica">Classifica</a></li>
+              <li><a href="/staff">Staff</a></li>
             </ul>
           </div>
           <div class="footer-section">
