--- a/public/pages/torneo.html
+++ b/public/pages/torneo.html
@@ -21,21 +21,20 @@
 
         <div class="navbar-content">
           <ul class="navbar-menu">
-            <li><a href="staff.html">Staff</a></li>
-            <li><a href="classifica.html">Classifica</a></li>
+            <li><a href="/staff">Staff</a></li>
+            <li><a href="/classifica">Classifica</a></li>
             <li><a href="/">Home</a></li>
-            <li><a href="memories.html">Memories</a></li>            
-            <li><a href="tornei.html">Tornei</a></li>
+            <li><a href="/memories">Memories</a></li>
+            <li><a href="/tornei">Tornei</a></li>
           </ul>
           <div class="navbar-actions">
-              <a href="/discord" class="btn-discord outline-glow"
-                  ><i class="fab fa-discord"></i> Login</a
-              >
+            <a href="/discord" class="btn-discord outline-glow"
+              ><i class="fab fa-discord"></i> Login</a
+            >
           </div>
-          <div class="navbar-login">
-          </div>
+          <div class="navbar-login"></div>
         </div>
-        
+
         <div class="navbar-toggle" id="mobile-menu">
           <span class="bar"></span>
           <span class="bar"></span>
