Update v0.0.4: trying fetching CoralMC Data.

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
             <li><a href="/memories">Memories</a></li>
             <li><a href="/tornei">Tornei</a></li>
           </ul>
+          <div class="navbar-search-trigger" id="nav-search-trigger">
+            <i class="fas fa-search"></i>
+          </div>
           <div class="navbar-actions">
             <a href="/discord" class="btn-discord outline-glow"
               ><i class="fab fa-discord"></i> Login</a
@@ -155,6 +158,8 @@
     </footer>
 
     <script src="./js/navbar.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="./js/socket.js"></script>
     <script src="./js/app.js"></script>
   </body>
 </html>
