--- a/public/pages/memories.html
+++ b/public/pages/memories.html
@@ -27,6 +27,9 @@
             <li><a href="/memories" class="outline-glow">Memories</a></li>
             <li><a href="/tornei">Tornei</a></li>
           </ul>
+          <div class="navbar-search-trigger" id="nav-search-trigger">
+            <i class="fas fa-search"></i>
+          </div>
           <div class="navbar-actions">
             <a href="/discord" class="btn-discord outline-glow"
               ><i class="fab fa-discord"></i> Login</a
@@ -59,8 +62,26 @@
 
       <div
         class="section-header-flex"
-        style="margin-bottom: 2rem; justify-content: flex-end"
+        style="margin-bottom: 2rem; justify-content: space-between; align-items: center; gap: 1rem; flex-wrap: wrap;"
       >
+        <input
+          type="text"
+          id="search-memories"
+          placeholder="Cerca memories..."
+          style="
+            padding: 0.8rem 1.2rem;
+            border-radius: 50px;
+            border: 1px solid #334155;
+            background: rgba(0, 0, 0, 0.3);
+            color: #fff;
+            width: 100%;
+            max-width: 300px;
+            outline: none;
+            transition: border-color 0.3s;
+          "
+          onfocus="this.style.borderColor='var(--primary-2)'"
+          onblur="this.style.borderColor='#334155'"
+        />
         <button id="add-memory-btn" class="btn-primary">
           <i class="fas fa-plus"></i> Nuova Memory
         </button>
@@ -112,6 +133,8 @@
     </footer>
 
     <script src="../js/navbar.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="../js/socket.js"></script>
     <script src="../js/app.js"></script>
   </body>
 </html>
