--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -27,6 +27,9 @@
             <li><a href="/memories">Memories</a></li>
             <li><a href="/tornei">Tornei</a></li>
           </ul>
+          <div class="navbar-search-trigger" id="nav-search-trigger">
+            <i class="fas fa-search"></i>
+          </div>
           <div class="navbar-actions">
             <a href="/discord" class="btn-discord outline-glow"
               ><i class="fab fa-discord"></i> Login</a
@@ -47,9 +50,23 @@
       <div class="profile-header admin-card">
         <div class="profile-info-main">
           <img id="profile-avatar" src="" alt="Avatar" />
-          <div>
-            <h1 id="profile-username">Caricamento...</h1>
-            <span id="profile-role" class="role-badge">...</span>
+          <div style="display: flex; flex-direction: column; gap: 10px; flex-wrap: wrap; align-items: center; justify-content: center;">
+            <div
+              style="
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                gap: 10px;
+              "
+            >
+              <h1
+                id="profile-username"
+                style="color: var(--light); font-size: 22px"
+              >
+                Caricamento...
+              </h1>
+              <span id="profile-role" class="role-badge">...</span>
+            </div>
             <div
               style="
                 margin-top: 12px;
@@ -62,6 +79,7 @@
                 type="text"
                 id="minecraft-nick"
                 placeholder="Minecraft Nick (Richiesto)"
+                readonly
                 style="
                   background: rgba(0, 0, 0, 0.2);
                   border: 1px solid #334155;
@@ -72,40 +90,88 @@
                   font-size: 0.9rem;
                 "
               />
-              <button
-                id="save-mc-nick"
-                class="btn-icon"
-                title="Salva Nickname"
-                style="
-                  background: var(--primary-2);
-                  color: #000;
-                  width: 30px;
-                  height: 30px;
-                  display: flex;
-                  align-items: center;
-                  justify-content: center;
-                  border-radius: 4px;
-                  cursor: pointer;
-                  border: none;
-                "
-              >
-                <i class="fas fa-save"></i>
-              </button>
             </div>
           </div>
         </div>
         <div class="profile-stats">
           <div class="stat-box">
-            <h3 id="stat-wins">0</h3>
-            <p>Vittorie</p>
-          </div>
-          <div class="stat-box">
+            <i class="fas fa-skull" style="color: var(--primary-2); font-size: 1.5rem; margin-bottom: 0.5rem;"></i>
             <h3 id="stat-kills">0</h3>
-            <p>Kills</p>
+            <p>Uccisioni</p>
           </div>
           <div class="stat-box">
-            <h3 id="stat-points">0</h3>
-            <p>Punti</p>
+            <i class="fas fa-heart-broken" style="color: var(--primary-2); font-size: 1.5rem; margin-bottom: 0.5rem;"></i>
+            <h3 id="stat-deaths">0</h3>
+            <p>Morti</p>
+          </div>
+          <div class="stat-box">
+            <i class="fas fa-star" style="color: var(--primary-2); font-size: 1.5rem; margin-bottom: 0.5rem;"></i>
+            <h3 id="stat-level">0</h3>
+            <p>Livello</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="admin-card" style="margin-top: 2rem; padding: 0; overflow: hidden; position: relative;">
+        <div id="bw-card-bg" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-size: cover; background-position: center; filter: blur(20px); opacity: 0.2; z-index: 0;"></div>
+
+        <div style="position: relative; z-index: 1; padding: 2rem;">
+          <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 2rem; flex-wrap: wrap; gap: 10px;">
+            <h2 style="margin: 0; font-size: 1.8rem; color: #fff; display: flex; align-items: center; gap: 10px;">
+              Statistiche BedWars
+            </h2>
+            <div class="bw-level-badge" style="background: linear-gradient(135deg, var(--primary-1), var(--primary-2)); padding: 5px 15px; border-radius: 20px; font-weight: bold; color: var(--light);">
+              Livello <span id="bw-level-display">0</span>
+            </div>
+          </div>
+
+          <div class="bw-stats-layout">
+            <div class="bw-player-render">
+              <img id="bw-skin-render" src="" alt="Skin" style="height: 300px; object-fit: contain; filter: drop-shadow(0 0 15px rgba(255,255,255,0.2));">
+            </div>
+
+            <div class="bw-stats-grid">
+              <div class="bw-stat-item">
+                <div class="bw-stat-label">Vittorie</div>
+                <div class="bw-stat-value" id="bw-wins" style="color: #4ade80;">0</div>
+              </div>
+              <div class="bw-stat-item">
+                <div class="bw-stat-label">Uccisioni</div>
+                <div class="bw-stat-value" id="bw-kills">0</div>
+              </div>
+              <div class="bw-stat-item">
+                <div class="bw-stat-label">Final Kills</div>
+                <div class="bw-stat-value" id="bw-final-kills" style="color: #a855f7;">0</div>
+              </div>
+              <div class="bw-stat-item">
+                <div class="bw-stat-label">Letti Rotti</div>
+                <div class="bw-stat-value" id="bw-beds" style="color: #ef4444;">0</div>
+              </div>
+              <div class="bw-stat-item">
+                <div class="bw-stat-label">Morti</div>
+                <div class="bw-stat-value" id="bw-deaths">0</div>
+              </div>
+              <div class="bw-stat-item">
+                <div class="bw-stat-label">Final Deaths</div>
+                <div class="bw-stat-value" id="bw-final-deaths">0</div>
+              </div>
+              <div class="bw-stat-item">
+                <div class="bw-stat-label">K/D Ratio</div>
+                <div class="bw-stat-value" id="bw-kdr" style="color: #3b82f6;">0</div>
+              </div>
+              <div class="bw-stat-item">
+                <div class="bw-stat-label">FK/D Ratio</div>
+                <div class="bw-stat-value" id="bw-fkdr" style="color: #3b82f6;">0</div>
+              </div>
+              <div class="bw-stat-item">
+                <div class="bw-stat-label">Partite</div>
+                <div class="bw-stat-value" id="bw-games">0</div>
+              </div>
+              <div class="bw-stat-item">
+                <div class="bw-stat-label">W/L Ratio</div>
+                <div class="bw-stat-value" id="bw-wlr" style="color: #fbbf24;">0</div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -117,10 +183,12 @@
             justify-content: space-between;
             align-items: center;
             margin-bottom: 1rem;
+            flex-wrap: wrap;
+            gap: 10px;
           "
         >
           <h2 style="margin: 0; font-size: 1.5rem; color: #fff">
-            Skills & Specialità
+            Minecraft Skills
           </h2>
           <button
             id="edit-skills-btn"
@@ -151,17 +219,80 @@
         </div>
       </div>
 
-      <div class="section-header-flex">
+
+      <div class="admin-card" style="margin-top: 2rem">
+        <div
+          style="
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 1rem;
+            flex-wrap: wrap;
+            gap: 10px;
+          "
+        >
+          <h2 style="margin: 0; font-size: 1.5rem; color: #fff">
+            Social Media
+          </h2>
+          <button
+            id="edit-socials-btn"
+            class="btn-icon"
+            style="
+              background: var(--primary-2);
+              color: #000;
+              width: 32px;
+              height: 32px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              border-radius: 4px;
+              border: none;
+              cursor: pointer;
+            "
+          >
+            <i class="fas fa-pen"></i>
+          </button>
+        </div>
+
+        <div
+          id="socials-display"
+          style="display: flex; gap: 15px; flex-wrap: wrap"
+        >
+          <span style="color: #94a3b8; font-style: italic"
+            >Nessun social collegato.</span
+          >
+        </div>
+      </div>
+
+      <div class="section-header-flex" style="flex-wrap: wrap; gap: 1rem;">
         <h2
           id="memories-title"
           class="section-title"
-          style="margin-bottom: 0; text-align: left"
+          style="margin-bottom: 0; text-align: left; font-size: 2rem;"
         >
           Le Mie Memories
         </h2>
-        <button id="add-memory-btn" class="btn-primary">
-          <i class="fas fa-plus"></i> Nuova Memory
-        </button>
+        <div style="display: flex; gap: 10px; flex-wrap: wrap; align-items: center;">
+          <input
+            type="text"
+            id="search-profile-memories"
+            placeholder="Cerca..."
+            style="
+              padding: 0.6rem 1rem;
+              border-radius: 50px;
+              border: 1px solid #334155;
+              background: rgba(0, 0, 0, 0.3);
+              color: #fff;
+              outline: none;
+              transition: border-color 0.3s;
+            "
+            onfocus="this.style.borderColor='var(--primary-2)'"
+            onblur="this.style.borderColor='#334155'"
+          />
+          <button id="add-memory-btn" class="btn-primary">
+            <i class="fas fa-plus"></i> Nuova Memory
+          </button>
+        </div>
       </div>
 
       <div class="grid-3" id="my-memories-grid"></div>
@@ -209,6 +340,8 @@
     </footer>
 
     <script src="/js/navbar.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/socket.js"></script>
     <script src="/js/app.js"></script>
     <script src="/js/profile.js"></script>
   </body>
