--- a/public/pages/memories.html
+++ b/public/pages/memories.html
@@ -2,14 +2,10 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-<<<<<<< HEAD
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-=======
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"
     />
->>>>>>> 568815a (Update v0.0.5)
     <title>Memories - Astral Cup</title>
     <link rel="stylesheet" href="../styles/main.css" />
     <link rel="icon" type="image/x-icon" href="../images/astralcup-logo.png" />
@@ -85,6 +81,7 @@
             max-width: 300px;
             outline: none;
             transition: border-color 0.3s;
+            box-sizing: border-box;
           "
           onfocus="this.style.borderColor='var(--primary-2)'"
           onblur="this.style.borderColor='#334155'"
