--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -3,14 +3,98 @@
 
 <head>
   <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"
-    />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" />
   <title>Il Mio Profilo - Astral Cup</title>
   <link rel="stylesheet" href="/styles/main.css" />
   <link rel="icon" type="image/x-icon" href="/images/astralcup-logo.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+  <style>
+    .social-pill {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      padding: 6px 12px;
+      background: rgba(0, 0, 0, 0.3);
+      border: 1px solid rgba(255, 255, 255, 0.1);
+      border-radius: 20px;
+      transition: all 0.2s ease;
+      text-decoration: none;
+      cursor: pointer;
+      color: #e2e8f0;
+      font-size: 0.85rem;
+      font-weight: 500;
+      white-space: nowrap;
+    }
+
+    #header-socials-container {
+      display: flex;
+      gap: 8px;
+      flex-wrap: wrap;
+    }
+
+    @media (max-width: 768px) {
+      #header-socials-container {
+        flex-direction: column;
+        width: 100%;
+      }
+
+      .social-pill {
+        width: 100%;
+      }
+    }
+
+    #profile-avatar {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      object-fit: cover;
+      flex-shrink: 0;
+    }
+
+    @media (min-width: 769px) {
+      .profile-info-main {
+        display: flex !important;
+        flex-direction: row !important;
+        align-items: center !important;
+        justify-content: flex-start !important;
+        text-align: left !important;
+        gap: 20px;
+      }
+
+      #profile-avatar {
+        margin: 0 !important;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .profile-header {
+        flex-direction: column !important;
+        align-items: center !important;
+      }
+
+      .profile-info-main {
+        display: flex !important;
+        flex-direction: column !important;
+        align-items: center !important;
+        text-align: center !important;
+        gap: 15px;
+        width: 100%;
+      }
+
+      .profile-info-main>div {
+        align-items: center !important;
+      }
+
+      .profile-actions-group {
+        width: 100%;
+        margin-top: 15px;
+      }
+
+      .profile-actions-group button {
+        flex: 1;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -20,7 +104,6 @@
         <img src="/images/astralcup.png" alt="Astral Cup Logo" />
         <span>ASTRAL CUP</span>
       </a>
-
       <div class="navbar-content">
         <ul class="navbar-menu">
           <li><a href="/staff">Staff</a></li>
@@ -33,13 +116,10 @@
           <i class="fas fa-search"></i>
         </div>
         <div class="navbar-actions">
-          <a href="/discord" class="btn-discord outline-glow"
-            ><i class="fab fa-discord"></i> Login</a
-          >
+          <a href="/discord" class="btn-discord outline-glow"><i class="fab fa-discord"></i> Login</a>
         </div>
         <div class="navbar-login"></div>
       </div>
-
       <div class="navbar-toggle" id="mobile-menu">
         <span class="bar"></span>
         <span class="bar"></span>
@@ -47,52 +127,65 @@
       </div>
     </div>
   </nav>
-
   <div class="container" style="padding-top: 120px; padding-bottom: 50px">
     <div class="profile-header admin-card">
-      <div class="profile-info-main">
-        <img id="profile-avatar" src="" alt="Avatar" />
+      <div class="profile-info-main" style="flex: 1; min-width: 0;">
         <div
-          style="display: flex; flex-direction: column; gap: 10px; flex-wrap: wrap; align-items: left; justify-content: center;">
-          <div style="
-                display: flex;
-                flex-direction: row;
-                flex-wrap: wrap;
-                gap: 10px;
-              ">
-            <h1 id="profile-username" style="color: var(--light); font-size: 22px">
-              Caricamento...
-            </h1>
-            <span id="profile-role" class="role-badge">...</span>
-          </div>
-          <div style="
-                margin-top: 12px;
-                display: flex;
-                align-items: center;
-                gap: 8px;
-              ">
-            <div style="position: relative;">
-              <input type="text" id="minecraft-nick" placeholder="Minecraft Nick (Richiesto)" style="
-                    background: rgba(0, 0, 0, 0.2);
-                    border: 1px solid #334155;
-                    color: #fff;
-                    padding: 5px 25px 5px 10px;
-                    border-radius: 4px;
-                    outline: none;
-                    font-size: 0.9rem;
-                  " />
-              <i class="fas fa-times" id="clear-mc-nick" style="position: absolute; right: 8px; top: 50%; transform: translateY(-50%); cursor: pointer; color: #94a3b8; display: none; font-size: 0.8rem;"></i>
+          style="display: flex; flex-direction: column; gap: 10px; flex-wrap: wrap; align-items: flex-start; justify-content: center;">
+          <div style="display: flex; flex-direction: row; gap: 20px; flex-wrap: wrap; align-items: flex-start; justify-content: center;">
+            <img id="profile-avatar" src="" alt="Avatar" />
+              <div style="display: flex; flex-direction: column; gap: 5px;">
+                            <div style="
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    gap: 10px;
+                  ">
+                <h1 id="profile-username" style="color: var(--light); font-size: 22px">
+                  Caricamento...
+                </h1>
+                <span id="profile-role" class="role-badge">...</span>
+              </div>
+              <div style="
+                    margin-top: 12px;
+                    display: flex;
+                    align-items: center;
+                    gap: 8px;
+                  ">
+                <div style="position: relative; width: 100%; max-width: 200px;">
+                  <input type="text" id="minecraft-nick" placeholder="Minecraft Nick (Richiesto)" style="
+                        background: rgba(0, 0, 0, 0.2);
+                        border: 1px solid #334155;
+                        color: #fff;
+                        padding: 5px 25px 5px 10px;
+                        border-radius: 4px;
+                        outline: none;
+                        font-size: 0.9rem;
+                        width: 100%;
+                        box-sizing: border-box;
+                      " />
+                  <i class="fas fa-times" id="clear-mc-nick"
+                    style="position: absolute; right: 8px; top: 50%; transform: translateY(-50%); cursor: pointer; color: #94a3b8; display: none; font-size: 0.8rem;"></i>
+                </div>
+                <button id="save-mc-nick" class="btn-icon" style="
+                      background: var(--primary-2);
+                      color: #fff;
+                      width: 32px;
+                      height: 32px;
+                      border-radius: 4px;
+                      display: flex;
+                      align-items: center;
+                      justify-content: center;
+                    "><i class="fas fa-check"></i></button>
+              </div>
             </div>
-            <button id="save-mc-nick" class="btn-icon" style="
-                  background: var(--primary-2);
-                  color: #fff;
-                  width: 32px;
-                  height: 32px;
-                  border-radius: 4px;
-                  display: flex;
-                  align-items: center;
-                  justify-content: center;
-                "><i class="fas fa-save"></i></button>
+          </div>
+          <div class="socials-wrapper"
+            style="display: flex; align-items: flex-start; gap: 10px; flex-wrap: wrap; margin-top: 8px;">
+            <div id="header-socials-container" style="display: flex; gap: 8px; flex-wrap: wrap;"></div>
+            <button id="edit-socials-btn" class="btn-icon"
+              style="background: rgba(255,255,255,0.1); height: 50px; width: auto; display: flex; align-items: center; justify-content: center; border-radius: 10px; border: none; cursor: pointer; color: #fff; font-size: 16px;"><i
+                class="fas fa-pen" style="margin-right: 10px; font-size: 15px;"></i> Modifica Links</button>
           </div>
         </div>
       </div>
@@ -105,31 +198,25 @@
         </button>
       </div>
     </div>
-
     <div class="admin-card"
       style="margin-top: 2rem; padding: 0; overflow: hidden; position: relative; border: 1px solid rgba(255,255,255,0.05);">
       <div id="bw-card-bg"
         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-size: cover; background-position: center; filter: blur(30px) brightness(0.5); opacity: 0.6; z-index: 0; transition: all 0.5s ease;">
       </div>
-
       <div style="position: relative; z-index: 1; padding: 2.5rem;">
         <div
           style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 2.5rem; border-bottom: 1px solid rgba(255,255,255,0.1); padding-bottom: 1.5rem;">
           <h2
             style="margin: 0; font-size: 2rem; color: #fff; font-weight: 800; display: flex; align-items: center; gap: 12px; letter-spacing: -0.5px;">
-
             Statistiche BW
           </h2>
         </div>
-
         <div class="bw-content-grid">
-
           <div class="bw-skin-col">
             <div class="bw-skin-container">
               <img id="bw-skin-render" src="" alt="User Skin"
                 style="height: 100%; object-fit: contain; filter: drop-shadow(0 10px 30px var(--glass-light)); z-index: 2; transform: scale(1.1);">
             </div>
-
             <div
               style="margin-top: -30px; z-index: 3; background: rgba(15, 23, 42, 0.9); backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.15); padding: 15px 40px; border-radius: 20px; text-align: center; box-shadow: 0 20px 40px rgba(0,0,0,0.4); min-width: 200px;">
               <div
@@ -143,49 +230,42 @@
                   style="font-size: 0.2em; color: var(--primary-2); filter: drop-shadow(0 0 10px rgba(59, 130, 246, 0.3));"></i>
               </div>
             </div>
-            <a href="#" target="_blank" id="coral-stats-link" class="btn-share" style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 10px; margin-top: 1.5rem; width: 100%; max-width: 240px; white-space: nowrap;">
+            <a href="#" target="_blank" id="coral-stats-link" class="btn-share"
+              style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 10px; margin-top: 1.5rem; width: 100%; max-width: 240px; white-space: nowrap;">
               Vai su CoralMC <i class="fas fa-share"></i>
             </a>
           </div>
-
           <div class="bw-stats-grid">
-
             <div class="bw-stat-box">
               <div class="bw-stat-label">Uccisioni</div>
               <div class="bw-stat-value" id="bw-kills">0</div>
               <div class="bw-stat-icon"><i class="fas fa-skull"></i></div>
             </div>
-
             <div class="bw-stat-box">
               <div class="bw-stat-label">Morti</div>
               <div class="bw-stat-value" id="bw-deaths">0</div>
               <div class="bw-stat-icon"><i class="fas fa-skull-crossbones"></i></div>
             </div>
-
             <div class="bw-stat-box highlight">
               <div class="bw-stat-label">K/D Ratio</div>
               <div class="bw-stat-value" id="bw-kdr">0</div>
               <div class="bw-stat-icon"><i class="fas fa-divide"></i></div>
             </div>
-
             <div class="bw-stat-box success">
               <div class="bw-stat-label">Vittorie</div>
               <div class="bw-stat-value" id="bw-wins">0</div>
               <div class="bw-stat-icon"><i class="fas fa-trophy"></i></div>
             </div>
-
             <div class="bw-stat-box danger">
               <div class="bw-stat-label">Sconfitte</div>
               <div class="bw-stat-value" id="bw-losses">0</div>
               <div class="bw-stat-icon"><i class="fas fa-times-circle"></i></div>
             </div>
-
             <div class="bw-stat-box highlight">
               <div class="bw-stat-label">Final Kills</div>
               <div class="bw-stat-value" id="bw-final-kills">0</div>
               <div class="bw-stat-icon"><i class="fas fa-fist-raised"></i></div>
             </div>
-
             <div class="bw-stat-box bw-span-2">
               <div class="bw-bar-labels">
                 <div class="bw-stat-label"
@@ -215,36 +295,30 @@
               </div>
               <div class="bw-stat-icon" style="opacity: 0.08;"><i class="fas fa-chart-pie"></i></div>
             </div>
-
             <div class="bw-stat-box">
               <div class="bw-stat-label">Letti Rotti</div>
               <div class="bw-stat-value" id="bw-beds">0</div>
               <div class="bw-stat-icon"><i class="fas fa-bed"></i></div>
             </div>
-
             <div class="bw-stat-box">
               <div class="bw-stat-label">Winstreak</div>
               <div class="bw-stat-value" id="bw-winstreak">0</div>
               <div class="bw-stat-icon"><i class="fas fa-fire"></i></div>
             </div>
-
             <div class="bw-stat-box fire">
               <div class="bw-stat-label">Top Winstreak</div>
               <div class="bw-stat-value" id="bw-top-winstreak">0</div>
               <div class="bw-stat-icon"><i class="fas fa-crown"></i></div>
             </div>
-
             <div class="bw-stat-box highlight">
               <div class="bw-stat-label">Monete</div>
               <div class="bw-stat-value" id="bw-coins">0</div>
               <div class="bw-stat-icon"><i class="fas fa-coins"></i></div>
             </div>
-
           </div>
         </div>
       </div>
     </div>
-
     <div class="admin-card" style="margin-top: 2rem">
       <div style="
             display: flex;
@@ -276,44 +350,12 @@
         <span style="color: #94a3b8; font-style: italic">Caricamento skills...</span>
       </div>
     </div>
-
-    <div class="admin-card" style="margin-top: 2rem">
-      <div style="
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 1rem;
-            flex-wrap: wrap;
-            gap: 10px;
-          ">
-        <h2 style="margin: 0; font-size: 1.5rem; color: #fff">
-          Social Media
-        </h2>
-        <button id="edit-socials-btn" class="btn-icon" style="
-              background: var(--primary-2);
-              color: #000;
-              width: 32px;
-              height: 32px;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-              border-radius: 4px;
-              border: none;
-              cursor: pointer;
-            ">
-          <i class="fas fa-pen"></i>
-        </button>
-      </div>
-
-      <div id="socials-display" style="display: flex; gap: 15px; flex-wrap: wrap">
-        <span style="color: #94a3b8; font-style: italic">Nessun social collegato.</span>
-      </div>
-    </div>
-
     <div id="settings-card" class="admin-card" style="margin-top: 2rem">
       <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
         <h2 style="margin: 0; font-size: 1.5rem; color: #fff">Impostazioni Notifiche</h2>
-        <button id="save-notif-settings-btn" class="btn-icon" style="background: var(--primary-2); color: #fff; width: 32px; height: 32px; border-radius: 4px; display: flex; align-items: center; justify-content: center;"><i class="fas fa-save"></i></button>
+        <button id="save-notif-settings-btn" class="btn-icon"
+          style="background: var(--primary-2); color: #fff; width: 32px; height: 32px; border-radius: 4px; display: flex; align-items: center; justify-content: center;"><i
+            class="fas fa-check"></i></button>
       </div>
       <div style="display: flex; flex-direction: column; gap: 10px;">
         <div class="toggle-row">
@@ -339,7 +381,6 @@
         </div>
       </div>
     </div>
-
     <div class="section-header-flex" style="flex-wrap: wrap; gap: 1rem;">
       <h2 id="memories-title" class="section-title" style="margin-bottom: 0; text-align: left; font-size: 2rem;">
         Le Mie Memories
@@ -353,16 +394,17 @@
               color: #fff;
               outline: none;
               transition: border-color 0.3s;
+              width: 100%;
+              max-width: 250px;
+              box-sizing: border-box;
             " onfocus="this.style.borderColor='var(--primary-2)'" onblur="this.style.borderColor='#334155'" />
         <button id="add-memory-btn" class="btn-primary">
           <i class="fas fa-plus"></i> Nuova Memory
         </button>
       </div>
     </div>
-
     <div class="grid-3" id="my-memories-grid"></div>
   </div>
-
   <footer>
     <div class="container">
       <div class="footer-content">
@@ -403,7 +445,6 @@
       </div>
     </div>
   </footer>
-
   <script src="/js/navbar.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/socket.js"></script>
