--- a/public/pages/torneo.html
+++ b/public/pages/torneo.html
@@ -53,6 +53,7 @@
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="../js/socket.js"></script>
+    <script src="../js/app.js"></script>
     <script src="../js/torneo.js"></script>
     <script src="../js/navbar.js"></script>
   </body>
