--- a/public/pages/adminpanel/tornei.html
+++ b/public/pages/adminpanel/tornei.html
@@ -25,13 +25,11 @@
         <div class="navbar-content">
           <ul class="navbar-menu">
             <li>
-              <a href="/admin/classifica">Gestione Classifica</a>
+              <a href="/admin/iscrizioni">Iscrizioni</a>
             </li>
             <li>
-              <a href="/admin/iscrizioni">Gestione Iscrizioni</a>
+              <a href="/admin/tornei">Tornei</a>
             </li>
-            <li><a href="/admin/tornei">Gestione Tornei</a></li>
-            <li><a href="/admin/user">Gestione Utenti</a></li>
           </ul>
           <div class="navbar-actions">
             <a href="/discord" class="btn-discord outline-glow"
@@ -50,7 +48,7 @@
     </nav>
 
     <div class="container" style="padding-top: 120px; padding-bottom: 50px">
-        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 2rem;">
+        <div style="display: flex; justify-content: space-between; flex-wrap: wrap; gap: 10px; align-items: center; margin-bottom: 2rem;">
             <h1 class="section-title" style="margin-bottom: 0;">Gestione Tornei</h1>
             <a href="/admin" class="btn-visit" style="padding: 0.5rem 1rem; font-size: 0.9rem;"><i class="fas fa-arrow-left"></i> Dashboard</a>
         </div>
