--- a/public/pages/memories.html
+++ b/public/pages/memories.html
@@ -91,7 +91,26 @@
         </button>
       </div>
 
-      <div class="grid-3"></div>
+      <div class="grid-3">
+        <div class="card">
+            <div class="skeleton" style="height: 180px; width: 100%; margin-bottom: 1rem;"></div>
+            <div class="skeleton" style="width: 80%; height: 20px; margin-bottom: 0.5rem;"></div>
+            <div class="skeleton" style="width: 40%; height: 16px; margin-bottom: 1rem;"></div>
+            <div class="skeleton" style="width: 90%; height: 16px;"></div>
+        </div>
+        <div class="card">
+            <div class="skeleton" style="height: 180px; width: 100%; margin-bottom: 1rem;"></div>
+            <div class="skeleton" style="width: 80%; height: 20px; margin-bottom: 0.5rem;"></div>
+            <div class="skeleton" style="width: 40%; height: 16px; margin-bottom: 1rem;"></div>
+            <div class="skeleton" style="width: 90%; height: 16px;"></div>
+        </div>
+        <div class="card">
+            <div class="skeleton" style="height: 180px; width: 100%; margin-bottom: 1rem;"></div>
+            <div class="skeleton" style="width: 80%; height: 20px; margin-bottom: 0.5rem;"></div>
+            <div class="skeleton" style="width: 40%; height: 16px; margin-bottom: 1rem;"></div>
+            <div class="skeleton" style="width: 90%; height: 16px;"></div>
+        </div>
+      </div>
     </div>
 
     <!-- Footer -->
@@ -140,5 +159,6 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="../js/socket.js"></script>
     <script src="../js/app.js"></script>
+    <script src="../js/safe-load.js"></script>
   </body>
 </html>
