--- a/public/pages/classifica.html
+++ b/public/pages/classifica.html
@@ -54,25 +54,19 @@
 
       <div class="grid-3" style="align-items: flex-end">
         <div class="card rank-2">
-          <div class="card-icon">
-            <i class="fas fa-medal" style="color: #c0c0c0"></i>
-          </div>
-          <h3>2. Team Beta</h3>
-          <p>2300 Punti</p>
+          <div class="card-icon"><div class="skeleton skeleton-circle" style="width: 40px; height: 40px;"></div></div>
+          <div class="skeleton" style="width: 80%; height: 20px; margin: 10px auto;"></div>
+          <div class="skeleton" style="width: 50%; height: 16px; margin: 0 auto;"></div>
         </div>
         <div class="card rank-1">
-          <div class="card-icon">
-            <i class="fas fa-trophy" style="color: #ffd700"></i>
-          </div>
-          <h3>1. Team Alpha</h3>
-          <p>2500 Punti</p>
+          <div class="card-icon"><div class="skeleton skeleton-circle" style="width: 50px; height: 50px;"></div></div>
+          <div class="skeleton" style="width: 80%; height: 24px; margin: 10px auto;"></div>
+          <div class="skeleton" style="width: 50%; height: 16px; margin: 0 auto;"></div>
         </div>
         <div class="card rank-3">
-          <div class="card-icon">
-            <i class="fas fa-medal" style="color: #cd7f32"></i>
-          </div>
-          <h3>3. Team Gamma</h3>
-          <p>2100 Punti</p>
+          <div class="card-icon"><div class="skeleton skeleton-circle" style="width: 40px; height: 40px;"></div></div>
+          <div class="skeleton" style="width: 80%; height: 20px; margin: 10px auto;"></div>
+          <div class="skeleton" style="width: 50%; height: 16px; margin: 0 auto;"></div>
         </div>
       </div>
 
@@ -88,27 +82,27 @@
                 <th>Punti</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody id="leaderboard-body">
               <tr>
-                <td>4</td>
-                <td>Team Delta</td>
-                <td>8</td>
-                <td>150</td>
-                <td>1800</td>
+                <td><div class="skeleton" style="width: 20px; height: 16px;"></div></td>
+                <td><div class="skeleton" style="width: 120px; height: 16px;"></div></td>
+                <td><div class="skeleton" style="width: 40px; height: 16px;"></div></td>
+                <td><div class="skeleton" style="width: 40px; height: 16px;"></div></td>
+                <td><div class="skeleton" style="width: 60px; height: 16px;"></div></td>
               </tr>
               <tr>
-                <td>5</td>
-                <td>Team Epsilon</td>
-                <td>7</td>
-                <td>120</td>
-                <td>1650</td>
+                <td><div class="skeleton" style="width: 20px; height: 16px;"></div></td>
+                <td><div class="skeleton" style="width: 120px; height: 16px;"></div></td>
+                <td><div class="skeleton" style="width: 40px; height: 16px;"></div></td>
+                <td><div class="skeleton" style="width: 40px; height: 16px;"></div></td>
+                <td><div class="skeleton" style="width: 60px; height: 16px;"></div></td>
               </tr>
               <tr>
-                <td>6</td>
-                <td>Team Zeta</td>
-                <td>5</td>
-                <td>90</td>
-                <td>1200</td>
+                <td><div class="skeleton" style="width: 20px; height: 16px;"></div></td>
+                <td><div class="skeleton" style="width: 120px; height: 16px;"></div></td>
+                <td><div class="skeleton" style="width: 40px; height: 16px;"></div></td>
+                <td><div class="skeleton" style="width: 40px; height: 16px;"></div></td>
+                <td><div class="skeleton" style="width: 60px; height: 16px;"></div></td>
               </tr>
             </tbody>
           </table>
@@ -159,5 +153,6 @@
 
     <script src="../js/navbar.js"></script>
     <script src="../js/app.js"></script>
+    <script src="../js/safe-load.js"></script>
   </body>
 </html>
