--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -128,7 +128,51 @@
     </div>
   </nav>
   <div class="container" style="padding-top: 120px; padding-bottom: 50px">
-    <div class="profile-header admin-card">
+    <div id="user-not-found" style="display: none; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 4rem 1rem; min-height: 60vh;">
+        <i class="fas fa-user-slash" style="font-size: 8rem; color: #ef4444; margin-bottom: 2rem; filter: drop-shadow(0 0 30px rgba(239, 68, 68, 0.4)); animation: float 6s ease-in-out infinite;"></i>
+        <h1 style="font-size: 3rem; margin-bottom: 1rem; color: #fff; font-weight: 800;">Utente non trovato</h1>
+        <p style="color: #94a3b8; font-size: 1.2rem; max-width: 500px; margin-bottom: 2rem; line-height: 1.6;">
+            Sembra che il profilo che stai cercando non esista o sia stato rimosso.<br>Controlla il nome utente e riprova.
+        </p>
+        <a href="/" class="btn-visit" style="padding: 12px 30px; font-size: 1.1rem; background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.2);">
+            <i class="fas fa-home" style="margin-right: 8px;"></i> Torna alla Home
+        </a>
+        <style>@keyframes float { 0% { transform: translateY(0px); } 50% { transform: translateY(-20px); } 100% { transform: translateY(0px); } }</style>
+    </div>
+
+    <div id="profile-loading" style="display: flex; flex-direction: column; width: 100%; gap: 2rem;">
+        <!-- Header Skeleton -->
+        <div class="admin-card" style="display: flex; gap: 20px; align-items: center; flex-wrap: wrap;">
+            <div class="skeleton skeleton-circle" style="width: 80px; height: 80px;"></div>
+            <div style="flex: 1; min-width: 200px;">
+                <div class="skeleton skeleton-text" style="width: 200px; height: 28px;"></div>
+                <div class="skeleton skeleton-text" style="width: 100px;"></div>
+            </div>
+            <div class="skeleton" style="width: 120px; height: 40px; border-radius: 8px;"></div>
+        </div>
+        <!-- Stats Skeleton -->
+        <div class="admin-card">
+            <div class="skeleton skeleton-text" style="width: 150px; height: 24px; margin-bottom: 2rem;"></div>
+            <div class="bw-content-grid">
+                <div class="bw-skin-col">
+                     <div class="skeleton" style="height: 300px; width: 100%;"></div>
+                </div>
+                <div class="bw-stats-grid">
+                     <div class="skeleton" style="height: 80px;"></div>
+                     <div class="skeleton" style="height: 80px;"></div>
+                     <div class="skeleton" style="height: 80px;"></div>
+                     <div class="skeleton" style="height: 80px;"></div>
+                     <div class="skeleton" style="height: 80px;"></div>
+                     <div class="skeleton" style="height: 80px;"></div>
+                     <div class="skeleton" style="height: 80px;"></div>
+                     <div class="skeleton" style="height: 80px;"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="profile-main-content" style="display: none;">
+      <div class="profile-header admin-card">
       <div class="profile-info-main" style="flex: 1; min-width: 0;">
         <div
           style="display: flex; flex-direction: column; gap: 10px; flex-wrap: wrap; align-items: flex-start; justify-content: center;">
@@ -196,6 +240,9 @@
         <button id="btn-logout-profile" class="btn-visit logout-style">
           <i class="fas fa-sign-out-alt"></i> Logout
         </button>
+        <button id="btn-like-profile" class="btn-visit" style="background: rgba(239, 68, 68, 0.1); color: #f87171; border: 1px solid rgba(239, 68, 68, 0.2); display: none;">
+          <i class="far fa-heart"></i> <span id="profile-likes-label">Like</span> <span id="profile-likes-count" style="background: rgba(0,0,0,0.2); padding: 2px 6px; border-radius: 10px; font-size: 0.8em; margin-left: 5px;">0</span>
+        </button>
       </div>
     </div>
     <div class="admin-card"
@@ -213,27 +260,18 @@
         </div>
         <div class="bw-content-grid">
           <div class="bw-skin-col">
-            <div class="bw-skin-container">
+            <div class="bw-skin-container" style="position: relative;">
               <img id="bw-skin-render" src="" alt="User Skin"
                 style="height: 100%; object-fit: contain; filter: drop-shadow(0 10px 30px var(--glass-light)); z-index: 2; transform: scale(1.1);">
-            </div>
-            <div
-              style="margin-top: -30px; z-index: 3; background: rgba(15, 23, 42, 0.9); backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.15); padding: 15px 40px; border-radius: 20px; text-align: center; box-shadow: 0 20px 40px rgba(0,0,0,0.4); min-width: 200px;">
-              <div
-                style="font-size: 0.75rem; color: #94a3b8; text-transform: uppercase; letter-spacing: 2px; font-weight: 700; margin-bottom: 5px;">
-                Livello</div>
-              <div
-                style="font-size: 5rem; font-weight: 900; line-height: 1; display: flex; align-items: center; justify-content: center; gap: 10px;">
-                <span id="bw-level-badge-value"
-                  style="color: var(--primary-2); text-shadow: 0 0 20px rgba(59, 130, 246, 0.3); font-size: 0.2em;">0</span>
-                <i class="fas fa-star"
-                  style="font-size: 0.2em; color: var(--primary-2); filter: drop-shadow(0 0 10px rgba(59, 130, 246, 0.3));"></i>
+              <div style="position: absolute; bottom: 0; left: 50%; transform: translateX(-50%); background: rgba(0,0,0,0.7); padding: 10px 25px; border-radius: 20px; border: 1px solid rgba(59, 130, 246, 0.3); backdrop-filter: blur(5px); z-index: 10; display: flex; flex-direction: column; align-items: center; gap: 0; box-shadow: 0 4px 20px rgba(0,0,0,0.4);">
+                 <span style="color: var(--primary-2); font-weight: 800; font-size: 1.5rem; text-shadow: 0 0 20px rgba(59, 130, 246, 0.6); line-height: 1;">
+                    <i class="fas fa-star" style="margin-right: 5px; font-size: 1.2rem;"></i><span id="bw-level">0</span>
+                 </span>
+                 <span style="color: var(--light); font-size: 0.85rem; font-weight: 600; margin-top: 4px; letter-spacing: 0.5px;">
+                    <span id="bw-xp">0</span> XP
+                 </span>
               </div>
             </div>
-            <a href="#" target="_blank" id="coral-stats-link" class="btn-share"
-              style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 10px; margin-top: 1.5rem; width: 100%; max-width: 240px; white-space: nowrap;">
-              Vai su CoralMC <i class="fas fa-share"></i>
-            </a>
           </div>
           <div class="bw-stats-grid">
             <div class="bw-stat-box">
@@ -310,11 +348,6 @@
               <div class="bw-stat-value" id="bw-top-winstreak">0</div>
               <div class="bw-stat-icon"><i class="fas fa-crown"></i></div>
             </div>
-            <div class="bw-stat-box highlight">
-              <div class="bw-stat-label">Monete</div>
-              <div class="bw-stat-value" id="bw-coins">0</div>
-              <div class="bw-stat-icon"><i class="fas fa-coins"></i></div>
-            </div>
           </div>
         </div>
       </div>
@@ -350,37 +383,6 @@
         <span style="color: #94a3b8; font-style: italic">Caricamento skills...</span>
       </div>
     </div>
-    <div id="settings-card" class="admin-card" style="margin-top: 2rem">
-      <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
-        <h2 style="margin: 0; font-size: 1.5rem; color: #fff">Impostazioni Notifiche</h2>
-        <button id="save-notif-settings-btn" class="btn-icon"
-          style="background: var(--primary-2); color: #fff; width: 32px; height: 32px; border-radius: 4px; display: flex; align-items: center; justify-content: center;"><i
-            class="fas fa-check"></i></button>
-      </div>
-      <div style="display: flex; flex-direction: column; gap: 10px;">
-        <div class="toggle-row">
-          <span class="toggle-label">Notifica inizio torneo</span>
-          <label class="switch">
-            <input type="checkbox" id="setting-tournament-start">
-            <span class="slider"></span>
-          </label>
-        </div>
-        <div class="toggle-row">
-          <span class="toggle-label">Notifica torneo in corso</span>
-          <label class="switch">
-            <input type="checkbox" id="setting-tournament-update">
-            <span class="slider"></span>
-          </label>
-        </div>
-        <div class="toggle-row">
-          <span class="toggle-label">Notifica fine torneo</span>
-          <label class="switch">
-            <input type="checkbox" id="setting-tournament-end">
-            <span class="slider"></span>
-          </label>
-        </div>
-      </div>
-    </div>
     <div class="section-header-flex" style="flex-wrap: wrap; gap: 1rem;">
       <h2 id="memories-title" class="section-title" style="margin-bottom: 0; text-align: left; font-size: 2rem;">
         Le Mie Memories
@@ -404,6 +406,7 @@
       </div>
     </div>
     <div class="grid-3" id="my-memories-grid"></div>
+    </div>
   </div>
   <footer>
     <div class="container">
@@ -450,6 +453,7 @@
   <script src="/js/socket.js"></script>
   <script src="/js/app.js"></script>
   <script src="/js/profile.js"></script>
+  <script src="/js/safe-load.js"></script>
 </body>
 
 </html>
