--- a/public/pages/staff.html
+++ b/public/pages/staff.html
@@ -56,10 +56,36 @@
       </div>
 
       <div class="staff-layout">
-          <div id="staff-grid-1"></div>
-          <div id="staff-grid-2"></div>
-          <div id="staff-grid-3"></div>
-          <div id="staff-grid-4"></div>
+          <div id="staff-grid-1">
+              <div class="card staff-card" style="padding: 2rem;">
+                <div class="skeleton skeleton-circle" style="width: 100px; height: 100px; margin: 0 auto 1.5rem;"></div>
+                <div class="skeleton" style="width: 50%; margin: 0 auto 0.5rem; height: 16px;"></div>
+                <div class="skeleton" style="width: 70%; margin: 0 auto 1rem; height: 24px;"></div>
+                <div class="skeleton" style="width: 90%; margin: 0 auto; height: 16px;"></div>
+              </div>
+          </div>
+          <div id="staff-grid-2">
+              <div class="card staff-card" style="padding: 2rem;">
+                <div class="skeleton skeleton-circle" style="width: 100px; height: 100px; margin: 0 auto 1.5rem;"></div>
+                <div class="skeleton" style="width: 50%; margin: 0 auto 0.5rem; height: 16px;"></div>
+                <div class="skeleton" style="width: 70%; margin: 0 auto 1rem; height: 24px;"></div>
+                <div class="skeleton" style="width: 90%; margin: 0 auto; height: 16px;"></div>
+              </div>
+          </div>
+          <div id="staff-grid-3">
+              <div class="card staff-card" style="padding: 2rem;">
+                <div class="skeleton skeleton-circle" style="width: 100px; height: 100px; margin: 0 auto 1.5rem;"></div>
+                <div class="skeleton" style="width: 50%; margin: 0 auto 0.5rem; height: 16px;"></div>
+                <div class="skeleton" style="width: 70%; margin: 0 auto 1rem; height: 24px;"></div>
+                <div class="skeleton" style="width: 90%; margin: 0 auto; height: 16px;"></div>
+              </div>
+          </div>
+          <div id="staff-grid-4">
+              <div class="card staff-card" style="padding: 2rem;">
+                <div class="skeleton skeleton-circle" style="width: 70px; height: 70px; margin: 0 auto 1rem;"></div>
+                <div class="skeleton" style="width: 60%; margin: 0 auto; height: 16px;"></div>
+              </div>
+          </div>
       </div>
       <style>
           .staff-layout { 
@@ -158,5 +184,6 @@
 
     <script src="../js/navbar.js"></script>
     <script src="../js/app.js"></script>
+    <script src="../js/safe-load.js"></script>
   </body>
 </html>
