--- a/public/pages/tornei.html
+++ b/public/pages/tornei.html
@@ -13,6 +13,13 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
+    <style>
+      #all-tournaments-grid {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+      }
+    </style>
   </head>
   <body>
     <nav class="navbar">
@@ -52,7 +59,26 @@
     <div id="tornei" class="container" style="padding-top: 120px; padding-bottom: 50px">
       <h1 class="section-title">Tornei Disponibili</h1>
 
-      <div class="grid-3"></div>
+      <div class="grid-3" id="all-tournaments-grid">
+        <div class="card">
+            <div class="skeleton" style="height: 180px; width: 100%; margin-bottom: 1rem;"></div>
+            <div class="skeleton" style="width: 70%; height: 24px; margin-bottom: 0.5rem;"></div>
+            <div class="skeleton" style="width: 40%; height: 16px; margin-bottom: 1rem;"></div>
+            <div class="skeleton" style="height: 40px; width: 100%; border-radius: 8px;"></div>
+        </div>
+        <div class="card">
+            <div class="skeleton" style="height: 180px; width: 100%; margin-bottom: 1rem;"></div>
+            <div class="skeleton" style="width: 70%; height: 24px; margin-bottom: 0.5rem;"></div>
+            <div class="skeleton" style="width: 40%; height: 16px; margin-bottom: 1rem;"></div>
+            <div class="skeleton" style="height: 40px; width: 100%; border-radius: 8px;"></div>
+        </div>
+        <div class="card">
+            <div class="skeleton" style="height: 180px; width: 100%; margin-bottom: 1rem;"></div>
+            <div class="skeleton" style="width: 70%; height: 24px; margin-bottom: 0.5rem;"></div>
+            <div class="skeleton" style="width: 40%; height: 16px; margin-bottom: 1rem;"></div>
+            <div class="skeleton" style="height: 40px; width: 100%; border-radius: 8px;"></div>
+        </div>
+      </div>
     </div>
     <footer>
       <div class="container">
@@ -98,5 +124,6 @@ z              <li><a href="#">FAQ</a></li>
     <script src="/socket.io/socket.io.js"></script>
     <script src="../js/socket.js"></script>
     <script src="../js/app.js"></script>
+    <script src="../js/safe-load.js"></script>
   </body>
 </html>
