--- a/public/pages/torneo.html
+++ b/public/pages/torneo.html
@@ -49,12 +49,36 @@
       </div>
     </nav>
     <div class="container" style="padding-top: 120px; padding-bottom: 50px">
-      <div id="tournament-details"></div>
+      <div id="tournament-details">
+        <div class="t-grid" style="display: grid; grid-template-columns: 1fr 350px; gap: 2rem;">
+            <div class="main-col">
+                <div class="t-card" style="margin-bottom: 2rem; background: #1e293b; border-radius: 16px; overflow: hidden;">
+                    <div class="skeleton" style="height: 300px; width: 100%;"></div>
+                    <div style="padding: 2rem;">
+                        <div class="skeleton" style="width: 60%; height: 40px; margin-bottom: 1rem;"></div>
+                        <div class="skeleton" style="height: 16px; margin-bottom: 0.5rem;"></div>
+                        <div class="skeleton" style="height: 16px; margin-bottom: 0.5rem;"></div>
+                        <div class="skeleton" style="width: 80%; height: 16px;"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="sidebar-col">
+                <div class="t-card" style="padding: 1.5rem; background: #1e293b; border-radius: 16px;">
+                     <div class="skeleton" style="width: 50%; height: 24px; margin-bottom: 1.5rem;"></div>
+                     <div class="skeleton" style="height: 20px; margin-bottom: 1rem;"></div>
+                     <div class="skeleton" style="height: 20px; margin-bottom: 1rem;"></div>
+                     <div class="skeleton" style="height: 20px; margin-bottom: 1rem;"></div>
+                     <div class="skeleton" style="height: 40px; margin-top: 2rem; border-radius: 8px;"></div>
+                </div>
+            </div>
+        </div>
+      </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="../js/socket.js"></script>
     <script src="../js/app.js"></script>
     <script src="../js/torneo.js"></script>
     <script src="../js/navbar.js"></script>
+    <script src="../js/safe-load.js"></script>
   </body>
 </html>
