Releasing v0.0.7 - Bug fixed

--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -7,7 +7,7 @@
   <title>Il Mio Profilo - Astral Cup</title>
   <link rel="stylesheet" href="/styles/main.css" />
   <link rel="icon" type="image/x-icon" href="/images/astralcup-logo.png" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     .social-pill {
       display: flex;
@@ -263,7 +263,7 @@
             <div class="bw-skin-container" style="position: relative;">
               <img id="bw-skin-render" src="" alt="User Skin"
                 style="height: 100%; object-fit: contain; filter: drop-shadow(0 10px 30px var(--glass-light)); z-index: 2; transform: scale(1.1);">
-              <div style="position: absolute; bottom: 0; left: 50%; transform: translateX(-50%); background: rgba(0,0,0,0.7); padding: 10px 25px; border-radius: 20px; border: 1px solid rgba(59, 130, 246, 0.3); backdrop-filter: blur(5px); z-index: 10; display: flex; flex-direction: column; align-items: center; gap: 0; box-shadow: 0 4px 20px rgba(0,0,0,0.4);">
+              <div style="position: absolute; bottom: 0; left: 50%; min-width: 100px; transform: translateX(-50%); background: rgba(0,0,0,0.7); padding: 10px 25px; border-radius: 20px; border: 1px solid rgba(59, 130, 246, 0.3); backdrop-filter: blur(5px); z-index: 10; display: flex; flex-direction: column; align-items: center; gap: 0; box-shadow: 0 4px 20px rgba(0,0,0,0.4);">
                  <span style="color: var(--primary-2); font-weight: 800; font-size: 1.5rem; text-shadow: 0 0 20px rgba(59, 130, 246, 0.6); line-height: 1;">
                     <i class="fas fa-star" style="margin-right: 5px; font-size: 1.2rem;"></i><span id="bw-level">0</span>
                  </span>
