--- a/public/pages/settings.html
+++ b/public/pages/settings.html
@@ -6,7 +6,7 @@
   <title>Impostazioni - Astral Cup</title>
   <link rel="stylesheet" href="/styles/main.css" />
   <link rel="icon" type="image/x-icon" href="/images/astralcup-logo.png" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     .toggle-row {
         display: grid;
@@ -183,6 +183,15 @@
             <span class="slider"></span>
           </label>
           <span class="toggle-desc">Permetti agli altri di vedere le tue clip caricate.</span>
+        </div>
+
+        <div class="toggle-row">
+          <span class="toggle-label">Download Skin</span>
+          <label class="switch toggle-switch-container">
+            <input type="checkbox" id="setting-privacy-skin-download">
+            <span class="slider"></span>
+          </label>
+          <span class="toggle-desc">Permetti agli altri di scaricare la tua skin.</span>
         </div>
       </div>
     </div>
